Fix multi row wrap issue

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -74,6 +74,10 @@ body {
   text-align: center;
 }
 
+.icon:hover {
+	cursor: pointer;
+}
+
 .item-name {
   white-space: nowrap;
 }
